--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <!-- DataTables -->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.16/b-1.5.1/datatables.min.css"/>
   <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.16/b-1.5.1/datatables.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
   
   <!--Favicon-->
   <link rel="shortcut icon" type="image/png" href="eacc_logo_r9a_color_symbol_300dpi__2__k5k_icon.ico"/>
